== master

Add option time_format for simple column

== v.1.0.3

Callback column for given attribute
Compatibility with rails 3.0.2
Change dependency from rails to actionpack

== v.1.0.2

Packaged as a gem.

== v.1.0.1

Initial version: table_for method added.