@@ -1,6 +1,7 @@
 == master
 
 Add option time_format for simple column
+Add shortcut for column width
 
 == v.1.0.3
 
